--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,23 @@ jobs:
       - name: Build
         run: npm install && npm run build
 
+      # - name: Deploy to server
+      #   uses: wlixcc/SFTP-Deploy-Action@v1.2.5
+      #   with:  
+      #     username: 'root'   #ssh user name
+      #     server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
+      #     ssh_private_key: '${{ secrets.SSH_PRIVATE_KEY }}' #引用之前创建好的secret
+      #     port: 22
+      #     local_path: './.vitepress/dist/*'  # 对应我们项目build的文件夹路径
+      #     remote_path: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index'
+      #     delete_remote_files: true
+
       - name: Deploy to server
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.5
-        with:  
-          username: 'root'   #ssh user name
-          server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
-          ssh_private_key: '${{ secrets.SSH_PRIVATE_KEY }}' #引用之前创建好的secret
-          port: 22
-          local_path: './.vitepress/dist/*'  # 对应我们项目build的文件夹路径
-          remote_path: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index'
-          delete_remote_files: true
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: ./.vitepress/dist
+          target: /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index
+          rm: true
