--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,9 @@ jobs:
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_IP }}
-          username: ubuntu
+          username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: ./.vitepress/dist
           target: /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index
+          overwrite: true
           rm: true
