--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,16 @@ jobs:
       #     target: /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index
       #     overwrite: true
       #     rm: true
+
+      - name: Deploy to server
+        uses: marcodallasanta/ssh-scp-deploy@v1.2.0
+        with:
+          local: './.vitepress/dist'                                                  # Local file path - REQUIRED false - DEFAULT ./
+          remote: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index' # Remote file path - REQUIRED false - DEFAULT ~/
+          host: ${{secrets.SERVER_IP}}                                 # Remote server address - REQUIRED true
+          port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
+          user: 'root'                                                 # Remote server user - REQUIRED true
+          key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
+          pre_upload: echo "This will be executed before the upload!"  # Command to run via ssh before scp upload - REQUIRED false
+          post_upload: echo "This will be executed after the upload!"  # Command to run via ssh after scp upload - REQUIRED false
+          ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
