--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ jobs:
     # 服务器环境：最新版 Ubuntu
     runs-on: ubuntu-latest
     steps:
+      - name: 手动 SSH 连接测试
+        run: ssh -vvv -i <(echo "${{ secrets.SSH_PRIVATE_KEY }}") root@pl.xwzkj.top
+
+
       # 拉取代码
       - name: pull
         uses: actions/checkout@v2
