--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,26 +50,13 @@ jobs:
       #     remote_path: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index'
       #     delete_remote_files: true
 
-      # - name: Deploy to server
-      #   uses: appleboy/scp-action@v0.1.7
-      #   with:
-      #     host: ${{ secrets.SERVER_IP }}
-      #     username: ${{ secrets.SERVER_USER }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     source: ./.vitepress/dist
-      #     target: /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index
-      #     overwrite: true
-      #     rm: true
-
       - name: Deploy to server
-        uses: marcodallasanta/ssh-scp-deploy@v1.2.0
+        uses: appleboy/scp-action@v0.1.7
         with:
-          local: './.vitepress/dist'                                                  # Local file path - REQUIRED false - DEFAULT ./
-          remote: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index' # Remote file path - REQUIRED false - DEFAULT ~/
-          host: ${{secrets.SERVER_IP}}                                 # Remote server address - REQUIRED true
-          port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
-          user: 'root'                                                 # Remote server user - REQUIRED true
-          key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
-          pre_upload: echo "This will be executed before the upload!"  # Command to run via ssh before scp upload - REQUIRED false
-          post_upload: echo "This will be executed after the upload!"  # Command to run via ssh after scp upload - REQUIRED false
-          ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: ./.vitepress/dist
+          target: /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index
+          overwrite: true
+          rm: true
