--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,21 +13,21 @@ jobs:
     # 服务器环境：最新版 Ubuntu
     runs-on: ubuntu-latest
     steps:
-      # - name: Add SSH host key
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     ssh-keyscan pl.xwzkj.top >> ~/.ssh/known_hosts
-      #     chmod 644 ~/.ssh/known_hosts
+      - name: Add SSH host key
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan ${{secrets.SERVER_IP}} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
-      # - name: Setup SSH Key
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-      #     chmod 600 ~/.ssh/id_ed25519
+      - name: Setup SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
 
 
-      # - name: 手动 SSH 连接测试
-      #   run: ssh -vvv -i ~/.ssh/id_ed25519 root@pl.xwzkj.top
+      - name: 手动 SSH 连接测试
+        run: ssh -vvv -i ~/.ssh/id_ed25519 root@${{secrets.SERVER_IP}}
 
 
       # 拉取代码
