--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
     # 服务器环境：最新版 Ubuntu
     runs-on: ubuntu-latest
     steps:
-      - name: Add SSH host key
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan ${{secrets.SERVER_IP}} >> ~/.ssh/known_hosts
-          chmod 644 ~/.ssh/known_hosts
+      # - name: Add SSH host key
+      #   run: |
+      #     mkdir -p ~/.ssh
+      #     ssh-keyscan ${{secrets.SERVER_IP}} >> ~/.ssh/known_hosts
+      #     chmod 644 ~/.ssh/known_hosts
 
       # - name: Setup SSH Key
       #   run: |
@@ -70,6 +70,7 @@ jobs:
           port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
           user: 'root'                                                 # Remote server user - REQUIRED true
           key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
-          pre_upload: echo "This will be executed before the upload!"  # Command to run via ssh before scp upload - REQUIRED false
+          pre_upload: rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*  # Command to run via ssh before scp upload - REQUIRED false
           post_upload: echo "This will be executed after the upload!"  # Command to run via ssh after scp upload - REQUIRED false
           ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          scp_options: -v
