--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,16 @@ jobs:
       - name: Build
         run: npm install && npm run build
 
-      - name: Deploy to server
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.5
-        with:  
-          username: 'root'
-          server: '${{ secrets.SERVER_IP }}'
-          ssh_private_key: '${{ secrets.SSH_PRIVATE_KEY }}'
-          port: 22
-          local_path: './.vitepress/dist/*'
-          remote_path: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index'
-          delete_remote_files: true
+      # - name: Deploy to server
+      #   uses: wlixcc/SFTP-Deploy-Action@v1.2.5
+      #   with:  
+      #     username: 'root'
+      #     server: '${{ secrets.SERVER_IP }}'
+      #     ssh_private_key: '${{ secrets.SSH_PRIVATE_KEY }}'
+      #     port: 22
+      #     local_path: './.vitepress/dist/*'
+      #     remote_path: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index'
+      #     delete_remote_files: true
 
       # - name: Deploy to server
       #   uses: appleboy/scp-action@v0.1.7
@@ -61,16 +61,16 @@ jobs:
       #     overwrite: true
       #     rm: true
 
-      # - name: Deploy to server
-      #   uses: marcodallasanta/ssh-scp-deploy@v1.2.0
-      #   with:
-      #     local: './.vitepress/dist/*'                                                  # Local file path - REQUIRED false - DEFAULT ./
-      #     remote: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index' # Remote file path - REQUIRED false - DEFAULT ~/
-      #     host: ${{secrets.SERVER_IP}}                                 # Remote server address - REQUIRED true
-      #     port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
-      #     user: 'root'                                                 # Remote server user - REQUIRED true
-      #     key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
-      #     pre_upload: rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*  # Command to run via ssh before scp upload - REQUIRED false
-      #     post_upload: echo "This will be executed after the upload!"  # Command to run via ssh after scp upload - REQUIRED false
-      #     ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
-      #     scp_options: -v
+      - name: Deploy to server
+        uses: marcodallasanta/ssh-scp-deploy@v1.2.0
+        with:
+          local: './.vitepress/dist/*'                                                  # Local file path - REQUIRED false - DEFAULT ./
+          remote: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index' # Remote file path - REQUIRED false - DEFAULT ~/
+          host: ${{secrets.SERVER_IP}}                                 # Remote server address - REQUIRED true
+          port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
+          user: 'root'                                                 # Remote server user - REQUIRED true
+          key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
+          pre_upload: rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*  # Command to run via ssh before scp upload - REQUIRED false
+          post_upload: echo "This will be executed after the upload!"  # Command to run via ssh after scp upload - REQUIRED false
+          ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          scp_options: -v
