--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm install && npm run build
           
       - name: 打包文件
-        run: tar -czvf site.tar.gz ./.vitepress/dist/*
+        run: tar -czvf site.tar.gz .vitepress/dist/*
 
       - name: Deploy to server
         uses: marcodallasanta/ssh-scp-deploy@v1.2.0
@@ -52,9 +52,6 @@ jobs:
           user: 'root'                                                 # Remote server user - REQUIRED true
           key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
           pre_upload: rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*  # Command to run via ssh before scp upload - REQUIRED false
-          post_upload: |
-            cd /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index
-            tar -xzvf site.tar.gz                      
-          # Command to run via ssh after scp upload - REQUIRED false
+          post_upload: cd /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index && tar -xzvf site.tar.gz       # Command to run via ssh after scp upload - REQUIRED false
           ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           scp_options: -v
