fix: 修复github actions构建无法正确获得页面最后更新时间

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,9 @@ jobs:
 
       # 拉取代码
       - name: pull
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          fetch-depth: 0
           
       - name: 构建
         run: npm install && npm run build
