不间断更新

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,13 +73,20 @@ jobs:
         uses: marcodallasanta/ssh-scp-deploy@v1.2.0
         with:
           local: 'site.tar.gz'                                                  # Local file path - REQUIRED false - DEFAULT ./
-          remote: '/opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index' # Remote file path - REQUIRED false - DEFAULT ~/
+          remote: '/opt/xwzkj/temp/' # Remote file path - REQUIRED false - DEFAULT ~/
           host: ${{secrets.SERVER_IP}}                                 # Remote server address - REQUIRED true
           port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
           user: 'root'                                                 # Remote server user - REQUIRED true
           key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
-          pre_upload: rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*  # Command to run via ssh before scp upload - REQUIRED false
-          post_upload: cd /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index && tar -xzvf site.tar.gz       # Command to run via ssh after scp upload - REQUIRED false
+          pre_upload: |
+            rm -f /opt/xwzkj/temp/site.tar.gz
+          # 删掉之前的打包
+          # Command to run via ssh before scp upload - REQUIRED false
+          post_upload: |
+            rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*
+            tar -xzvf /opt/xwzkj/temp/site.tar.gz
+            rm -f /opt/xwzkj/temp/site.tar.gz
+          # Command to run via ssh after scp upload - REQUIRED false
           ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           scp_options: -v
 
