--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,14 +78,10 @@ jobs:
           port: '22'                                                   # Remote server port - REQUIRED false - DEFAULT 22
           user: 'root'                                                 # Remote server user - REQUIRED true
           key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
-          pre_upload: |
-            rm -f /opt/xwzkj/temp/site.tar.gz
+          pre_upload: rm -f /opt/xwzkj/temp/site.tar.gz
           # 删掉之前的打包
           # Command to run via ssh before scp upload - REQUIRED false
-          post_upload: |
-            rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/*
-            tar -xzvf /opt/xwzkj/temp/site.tar.gz
-            rm -f /opt/xwzkj/temp/site.tar.gz
+          post_upload: rm -r /opt/1panel/apps/openresty/openresty/www/sites/bmcu.xwzkj.top/index/* && tar -xzvf /opt/xwzkj/temp/site.tar.gz && rm -f /opt/xwzkj/temp/site.tar.gz
           # Command to run via ssh after scp upload - REQUIRED false
           ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           scp_options: -v
