--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,12 +46,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
-      - name: 构建
-        run: npm install && npm run build
-
+      
+      - name: 安装jq
+        run: |
+          sudo apt-get update
+          sudo apt-get install jq -y
 
       # github pages相关
+
+      - name: 为pages构建
+        run: |
+          jq '.base = "/bmcu-doc/"' conf.json > tmp.json 
+          mv tmp.json conf.json
+          npm install
+          npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -66,6 +74,13 @@ jobs:
         uses: actions/deploy-pages@v4
           
           
+      - name: 为服务器构建
+        run: |
+          jq '.base = "/"' conf.json > tmp.json 
+          mv tmp.json conf.json
+          npm install
+          npm run build
+
       - name: 打包文件为tar.gz
         run: cd .vitepress/dist && tar -czvf ../../site.tar.gz *
 
