--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "vite": "^6.1.1",
     "vitepress": "^1.6.3"
+  },
+  "dependencies": {
+    "naive-ui": "^2.41.0"
   }
 }
