--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   },
   "dependencies": {
     "naive-ui": "^2.41.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
